--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "python_config"]
 	path = python_config
 	url = https://github.com/rendicahya/python_config.git
+[submodule "python_video"]
+	path = python_video
+	url = https://github.com/rendicahya/python_video.git
